Convert from British-style quotation to American style

--- a/src/epub/text/act-1.xhtml
+++ b/src/epub/text/act-1.xhtml
@@ -948,7 +948,7 @@
 				<b>Hamlet</b>
 			</a>
 			<blockquote>
-				<a name="1.2.78">Seems, madam! nay it is; I know not ‘seems.’</a>
+				<a name="1.2.78">Seems, madam! nay it is; I know not “seems.”</a>
 				<br/>
 				<a name="1.2.79">’Tis not alone my inky cloak, good mother,</a>
 				<br/>
@@ -1013,7 +1013,7 @@
 				<br/>
 				<a name="1.2.107">From the first corse till he that died to-day,</a>
 				<br/>
-				<a name="1.2.108">‘This must be so.’ We pray you, throw to earth</a>
+				<a name="1.2.108">“This must be so.” We pray you, throw to earth</a>
 				<br/>
 				<a name="1.2.109">This unprevailing woe, and think of us</a>
 				<br/>
@@ -2793,7 +2793,7 @@
 				</p>
 				<a name="1.5.115">So, uncle, there you are. Now to my word;</a>
 				<br/>
-				<a name="1.5.116">It is ‘Adieu, adieu! remember me.’</a>
+				<a name="1.5.116">It is “Adieu, adieu! remember me.”</a>
 				<br/>
 				<a name="1.5.117">I have sworn ’t.</a>
 				<br/>
@@ -3166,9 +3166,9 @@
 				<br/>
 				<a name="1.5.193">Or by pronouncing of some doubtful phrase,</a>
 				<br/>
-				<a name="1.5.194">As ‘Well, well, we know,’ or ‘We could, an if we would,’</a>
+				<a name="1.5.194">As “Well, well, we know,” or “We could, an if we would,”</a>
 				<br/>
-				<a name="1.5.195">Or ‘If we list to speak,’ or ‘There be, an if they might,’</a>
+				<a name="1.5.195">Or “If we list to speak,” or “There be, an if they might,”</a>
 				<br/>
 				<a name="1.5.196">Or such ambiguous giving out, to note</a>
 				<br/>
