--- a/src/epub/text/act-2.xhtml
+++ b/src/epub/text/act-2.xhtml
@@ -65,9 +65,9 @@
 				<br/>
 				<a name="2.1.14">Take you, as ’twere, some distant knowledge of him;</a>
 				<br/>
-				<a name="2.1.15">As thus, ‘I know his father and his friends,</a>
+				<a name="2.1.15">As thus, “I know his father and his friends,</a>
 				<br/>
-				<a name="2.1.16">And in part him:‘ do you mark this, Reynaldo?</a>
+				<a name="2.1.16">And in part him:“ do you mark this, Reynaldo?</a>
 				<br/>
 			</blockquote>
 			<a name="speech6">
@@ -81,11 +81,11 @@
 				<b>Lord Polonius</b>
 			</a>
 			<blockquote>
-				<a name="2.1.18">‘And in part him; but’ you may say ‘not well:</a>
+				<a name="2.1.18">“And in part him; but” you may say “not well:</a>
 				<br/>
 				<a name="2.1.19">But, if’t be he I mean, he’s very wild;</a>
 				<br/>
-				<a name="2.1.20">Addicted so and so:’ and there put on him</a>
+				<a name="2.1.20">Addicted so and so:” and there put on him</a>
 				<br/>
 				<a name="2.1.21">What forgeries you please; marry, none so rank</a>
 				<br/>
@@ -125,7 +125,7 @@
 				<b>Lord Polonius</b>
 			</a>
 			<blockquote>
-				<a name="2.1.30">‘Faith, no; as you may season it in the charge</a>
+				<a name="2.1.30">“Faith, no; as you may season it in the charge</a>
 				<br/>
 				<a name="2.1.31">You must not put another scandal on him,</a>
 				<br/>
@@ -175,7 +175,7 @@
 				<br/>
 				<a name="2.1.44">You laying these slight sullies on my son,</a>
 				<br/>
-				<a name="2.1.45">As ’twere a thing a little soil’d i’ the working, Mark you,</a>
+				<a name="2.1.45">As ’twere a thing a little soil’d i” the working, Mark you,</a>
 				<br/>
 				<a name="2.1.46">Your party in converse, him you would sound,</a>
 				<br/>
@@ -185,7 +185,7 @@
 				<br/>
 				<a name="2.1.49">He closes with you in this consequence;</a>
 				<br/>
-				<a name="2.1.50">‘Good sir,’ or so, or ‘friend,’ or ‘gentleman,’</a>
+				<a name="2.1.50">“Good sir,” or so, or “friend,” or “gentleman,”</a>
 				<br/>
 				<a name="2.1.51">According to the phrase or the addition</a>
 				<br/>
@@ -214,28 +214,28 @@
 				<b>Reynaldo</b>
 			</a>
 			<blockquote>
-				<a name="2.1.57">At ‘closes in the consequence,’ at ‘friend or so,’</a>
+				<a name="2.1.57">At “closes in the consequence,” at “friend or so,”</a>
 				<br/>
-				<a name="2.1.58">and ‘gentleman.’</a>
+				<a name="2.1.58">and “gentleman.”</a>
 				<br/>
 			</blockquote>
 			<a name="speech19">
 				<b>Lord Polonius</b>
 			</a>
 			<blockquote>
-				<a name="2.1.59">At ‘closes in the consequence,’ ay, marry;</a>
+				<a name="2.1.59">At “closes in the consequence,” ay, marry;</a>
 				<br/>
-				<a name="2.1.60">He closes thus: ‘I know the gentleman;</a>
+				<a name="2.1.60">He closes thus: “I know the gentleman;</a>
 				<br/>
-				<a name="2.1.61">I saw him yesterday, or t’ other day,</a>
+				<a name="2.1.61">I saw him yesterday, or t” other day,</a>
 				<br/>
 				<a name="2.1.62">Or then, or then; with such, or such; and, as you say,</a>
 				<br/>
 				<a name="2.1.63">There was a’ gaming; there o’ertook in’s rouse;</a>
 				<br/>
-				<a name="2.1.64">There falling out at tennis:’ or perchance,</a>
+				<a name="2.1.64">There falling out at tennis:” or perchance,</a>
 				<br/>
-				<a name="2.1.65">‘I saw him enter such a house of sale,’</a>
+				<a name="2.1.65">“I saw him enter such a house of sale,”</a>
 				<br/>
 				<a name="2.1.66">Videlicet, a brothel, or so forth.</a>
 				<br/>
@@ -827,18 +827,18 @@
 				<p>
 					<i>Reads</i>
 				</p>
-				<a name="2.2.115">‘To the celestial and my soul’s idol, the most</a>
+				<a name="2.2.115">“To the celestial and my soul’s idol, the most</a>
 				<br/>
-				<a name="2.2.116">beautified Ophelia,’⁠—</a>
+				<a name="2.2.116">beautified Ophelia,”⁠—</a>
 				<br/>
-				<a name="2.2.117">That’s an ill phrase, a vile phrase; ‘beautified’ is</a>
+				<a name="2.2.117">That’s an ill phrase, a vile phrase; “beautified” is</a>
 				<br/>
 				<a name="2.2.118">a vile phrase: but you shall hear. Thus:</a>
 				<br/>
 				<p>
 					<i>Reads</i>
 				</p>
-				<a name="2.2.119">‘In her excellent white bosom, these, &amp; c.’</a>
+				<a name="2.2.119">“In her excellent white bosom, these, &amp; c.”</a>
 				<br/>
 			</blockquote>
 			<a name="speech22">
@@ -857,7 +857,7 @@
 				<p>
 					<i>Reads</i>
 				</p>
-				<a name="2.2.122">‘Doubt thou the stars are fire;</a>
+				<a name="2.2.122">“Doubt thou the stars are fire;</a>
 				<br/>
 				<a name="2.2.123">Doubt that the sun doth move;</a>
 				<br/>
@@ -865,15 +865,15 @@
 				<br/>
 				<a name="2.2.125">But never doubt I love.</a>
 				<br/>
-				<a name="2.2.126">‘O dear Ophelia, I am ill at these numbers;</a>
+				<a name="2.2.126">“O dear Ophelia, I am ill at these numbers;</a>
 				<br/>
 				<a name="2.2.127">I have not art to reckon my groans: but that</a>
 				<br/>
 				<a name="2.2.128">I love thee best, O most best, believe it. Adieu.</a>
 				<br/>
-				<a name="2.2.129">‘Thine evermore most dear lady, whilst</a>
+				<a name="2.2.129">“Thine evermore most dear lady, whilst</a>
 				<br/>
-				<a name="2.2.130">this machine is to him, HAMLET.’</a>
+				<a name="2.2.130">this machine is to him, HAMLET.”</a>
 				<br/>
 				<a name="2.2.131">This, in obedience, hath my daughter shown me,</a>
 				<br/>
@@ -931,9 +931,9 @@
 				<br/>
 				<a name="2.2.148">And my young mistress thus I did bespeak:</a>
 				<br/>
-				<a name="2.2.149">‘Lord Hamlet is a prince, out of thy star;</a>
+				<a name="2.2.149">“Lord Hamlet is a prince, out of thy star;</a>
 				<br/>
-				<a name="2.2.150">This must not be:’ and then I precepts gave her,</a>
+				<a name="2.2.150">This must not be:” and then I precepts gave her,</a>
 				<br/>
 				<a name="2.2.151">That she should lock herself from his resort,</a>
 				<br/>
@@ -974,7 +974,7 @@
 			<blockquote>
 				<a name="2.2.162">Hath there been such a time⁠—I’d fain know that⁠—</a>
 				<br/>
-				<a name="2.2.163">That I have positively said ’Tis so,’</a>
+				<a name="2.2.163">That I have positively said ’Tis so,”</a>
 				<br/>
 				<a name="2.2.164">When it proved otherwise?</a>
 				<br/>
@@ -1376,7 +1376,7 @@
 				<b>Guildenstern</b>
 			</a>
 			<blockquote>
-				<a name="2.2.249">‘Faith, her privates we.</a>
+				<a name="2.2.249">“Faith, her privates we.</a>
 				<br/>
 			</blockquote>
 			<a name="speech74">
@@ -1435,7 +1435,7 @@
 			<blockquote>
 				<a name="2.2.260">A goodly one; in which there are many confines,</a>
 				<br/>
-				<a name="2.2.261">wards and dungeons, Denmark being one o’ the worst.</a>
+				<a name="2.2.261">wards and dungeons, Denmark being one o” the worst.</a>
 				<br/>
 			</blockquote>
 			<a name="speech81">
@@ -1678,7 +1678,7 @@
 				<b>Hamlet</b>
 			</a>
 			<blockquote>
-				<a name="2.2.326">Why did you laugh then, when I said ‘man delights not me’?</a>
+				<a name="2.2.326">Why did you laugh then, when I said “man delights not me”?</a>
 				<br/>
 			</blockquote>
 			<a name="speech104">
@@ -1807,7 +1807,7 @@
 				<b>Rosencrantz</b>
 			</a>
 			<blockquote>
-				<a name="2.2.363">‘Faith, there has been much to do on both sides; and</a>
+				<a name="2.2.363">“Faith, there has been much to do on both sides; and</a>
 				<br/>
 				<a name="2.2.364">the nation holds it no sin to tarre them to</a>
 				<br/>
@@ -1858,7 +1858,7 @@
 				<br/>
 				<a name="2.2.375">hundred ducats a-piece for his picture in little.</a>
 				<br/>
-				<a name="2.2.376">‘Sblood, there is something in this more than</a>
+				<a name="2.2.376">“Sblood, there is something in this more than</a>
 				<br/>
 				<a name="2.2.377">natural, if philosophy could find it out.</a>
 				<br/>
@@ -1944,7 +1944,7 @@
 			<blockquote>
 				<a name="2.2.395">I will prophesy he comes to tell me of the players;</a>
 				<br/>
-				<a name="2.2.396">mark it. You say right, sir: o’ Monday morning;</a>
+				<a name="2.2.396">mark it. You say right, sir: o” Monday morning;</a>
 				<br/>
 				<a name="2.2.397">’twas so indeed.</a>
 				<br/>
@@ -2032,9 +2032,9 @@
 			<blockquote>
 				<a name="2.2.414">Why,</a>
 				<br/>
-				<a name="2.2.415">‘One fair daughter and no more,</a>
+				<a name="2.2.415">“One fair daughter and no more,</a>
 				<br/>
-				<a name="2.2.416">The which he loved passing well.’</a>
+				<a name="2.2.416">The which he loved passing well.”</a>
 				<br/>
 			</blockquote>
 			<a name="speech138">
@@ -2080,11 +2080,11 @@
 			<blockquote>
 				<a name="2.2.423">Why,</a>
 				<br/>
-				<a name="2.2.424">‘As by lot, God wot,’</a>
+				<a name="2.2.424">“As by lot, God wot,”</a>
 				<br/>
 				<a name="2.2.425">and then, you know,</a>
 				<br/>
-				<a name="2.2.426">‘It came to pass, as most like it was,’⁠—</a>
+				<a name="2.2.426">“It came to pass, as most like it was,”⁠—</a>
 				<br/>
 				<a name="2.2.427">the first row of the pious chanson will show you</a>
 				<br/>
@@ -2163,11 +2163,11 @@
 				<br/>
 				<a name="2.2.458">at this line: let me see, let me see⁠—</a>
 				<br/>
-				<a name="2.2.459">‘The rugged Pyrrhus, like the Hyrcanian beast,’⁠—</a>
+				<a name="2.2.459">“The rugged Pyrrhus, like the Hyrcanian beast,”⁠—</a>
 				<br/>
 				<a name="2.2.460">it is not so:⁠—it begins with Pyrrhus:⁠—</a>
 				<br/>
-				<a name="2.2.461">‘The rugged Pyrrhus, he whose sable arms,</a>
+				<a name="2.2.461">“The rugged Pyrrhus, he whose sable arms,</a>
 				<br/>
 				<a name="2.2.462">Black as his purpose, did the night resemble</a>
 				<br/>
@@ -2191,7 +2191,7 @@
 				<br/>
 				<a name="2.2.472">With eyes like carbuncles, the hellish Pyrrhus</a>
 				<br/>
-				<a name="2.2.473">Old grandsire Priam seeks.’</a>
+				<a name="2.2.473">Old grandsire Priam seeks.”</a>
 				<br/>
 				<a name="2.2.474">So, proceed you.</a>
 				<br/>
@@ -2200,7 +2200,7 @@
 				<b>Lord Polonius</b>
 			</a>
 			<blockquote>
-				<a name="2.2.475">‘Fore God, my lord, well spoken, with good accent and</a>
+				<a name="2.2.475">“Fore God, my lord, well spoken, with good accent and</a>
 				<br/>
 				<a name="2.2.476">good discretion.</a>
 				<br/>
@@ -2209,7 +2209,7 @@
 				<b>First Player</b>
 			</a>
 			<blockquote>
-				<a name="2.2.477">‘Anon he finds him</a>
+				<a name="2.2.477">“Anon he finds him</a>
 				<br/>
 				<a name="2.2.478">Striking too short at Greeks; his antique sword,</a>
 				<br/>
@@ -2231,7 +2231,7 @@
 				<br/>
 				<a name="2.2.487">Which was declining on the milky head</a>
 				<br/>
-				<a name="2.2.488">Of reverend Priam, seem’d i’ the air to stick:</a>
+				<a name="2.2.488">Of reverend Priam, seem’d i” the air to stick:</a>
 				<br/>
 				<a name="2.2.489">So, as a painted tyrant, Pyrrhus stood,</a>
 				<br/>
@@ -2267,7 +2267,7 @@
 				<br/>
 				<a name="2.2.505">And bowl the round nave down the hill of heaven,</a>
 				<br/>
-				<a name="2.2.506">As low as to the fiends!’</a>
+				<a name="2.2.506">As low as to the fiends!”</a>
 				<br/>
 			</blockquote>
 			<a name="speech148">
@@ -2292,28 +2292,28 @@
 				<b>First Player</b>
 			</a>
 			<blockquote>
-				<a name="2.2.511">‘But who, O, who had seen the mobled queen⁠—’</a>
+				<a name="2.2.511">“But who, O, who had seen the mobled queen⁠—”</a>
 				<br/>
 			</blockquote>
 			<a name="speech151">
 				<b>Hamlet</b>
 			</a>
 			<blockquote>
-				<a name="2.2.512">‘The mobled queen?’</a>
+				<a name="2.2.512">“The mobled queen?”</a>
 				<br/>
 			</blockquote>
 			<a name="speech152">
 				<b>Lord Polonius</b>
 			</a>
 			<blockquote>
-				<a name="2.2.513">That’s good; ‘mobled queen’ is good.</a>
+				<a name="2.2.513">That’s good; “mobled queen” is good.</a>
 				<br/>
 			</blockquote>
 			<a name="speech153">
 				<b>First Player</b>
 			</a>
 			<blockquote>
-				<a name="2.2.514">‘Run barefoot up and down, threatening the flames</a>
+				<a name="2.2.514">“Run barefoot up and down, threatening the flames</a>
 				<br/>
 				<a name="2.2.515">With bisson rheum; a clout upon that head</a>
 				<br/>
@@ -2341,7 +2341,7 @@
 				<br/>
 				<a name="2.2.527">Would have made milch the burning eyes of heaven,</a>
 				<br/>
-				<a name="2.2.528">And passion in the gods.’</a>
+				<a name="2.2.528">And passion in the gods.”</a>
 				<br/>
 			</blockquote>
 			<a name="speech154">
@@ -2526,7 +2526,7 @@
 				<br/>
 				<a name="2.2.585">Ha!</a>
 				<br/>
-				<a name="2.2.586">‘Swounds, I should take it: for it cannot be</a>
+				<a name="2.2.586">“Swounds, I should take it: for it cannot be</a>
 				<br/>
 				<a name="2.2.587">But I am pigeon-liver’d and lack gall</a>
 				<br/>
