--- a/src/epub/text/act-3.xhtml
+++ b/src/epub/text/act-3.xhtml
@@ -1171,9 +1171,9 @@
 				<br/>
 				<a name="3.2.132">then; or else shall he suffer not thinking on, with</a>
 				<br/>
-				<a name="3.2.133">the hobby-horse, whose epitaph is ‘For, O, for, O,</a>
+				<a name="3.2.133">the hobby-horse, whose epitaph is “For, O, for, O,</a>
 				<br/>
-				<a name="3.2.134">the hobby-horse is forgot.’</a>
+				<a name="3.2.134">the hobby-horse is forgot.”</a>
 				<br/>
 				<p>
 					<i>Hautboys play. The dumb-show enters</i>
@@ -1329,7 +1329,7 @@
 				<b>Player King</b>
 			</a>
 			<blockquote>
-				<a name="3.2.168">‘Faith, I must leave thee, love, and shortly too;</a>
+				<a name="3.2.168">“Faith, I must leave thee, love, and shortly too;</a>
 				<br/>
 				<a name="3.2.169">My operant powers their functions leave to do:</a>
 				<br/>
@@ -1526,7 +1526,7 @@
 			<blockquote>
 				<a name="3.2.230">No, no, they do but jest, poison in jest; no offence</a>
 				<br/>
-				<a name="3.2.231">i’ the world.</a>
+				<a name="3.2.231">i” the world.</a>
 				<br/>
 			</blockquote>
 			<a name="speech71">
@@ -1605,7 +1605,7 @@
 				<br/>
 				<a name="3.2.248">pox, leave thy damnable faces, and begin. Come:</a>
 				<br/>
-				<a name="3.2.249">‘the croaking raven doth bellow for revenge.’</a>
+				<a name="3.2.249">“the croaking raven doth bellow for revenge.”</a>
 				<br/>
 			</blockquote>
 			<a name="speech79">
@@ -2001,7 +2001,7 @@
 				<b>Hamlet</b>
 			</a>
 			<blockquote>
-				<a name="3.2.335">Ay, but sir, ‘While the grass grows,’⁠—the proverb</a>
+				<a name="3.2.335">Ay, but sir, “While the grass grows,”⁠—the proverb</a>
 				<br/>
 				<a name="3.2.336">is something musty.</a>
 				<br/>
@@ -2388,7 +2388,7 @@
 				<br/>
 				<a name="3.3.54">My fault is past. But, O, what form of prayer</a>
 				<br/>
-				<a name="3.3.55">Can serve my turn? ‘Forgive me my foul murder’?</a>
+				<a name="3.3.55">Can serve my turn? “Forgive me my foul murder”?</a>
 				<br/>
 				<a name="3.3.56">That cannot be; since I am still possess’d</a>
 				<br/>
