--- a/src/epub/text/act-4.xhtml
+++ b/src/epub/text/act-4.xhtml
@@ -53,7 +53,7 @@
 				<br/>
 				<a name="4.1.9">Behind the arras hearing something stir,</a>
 				<br/>
-				<a name="4.1.10">Whips out his rapier, cries, ‘A rat, a rat!’</a>
+				<a name="4.1.10">Whips out his rapier, cries, “A rat, a rat!”</a>
 				<br/>
 				<a name="4.1.11">And, in this brainish apprehension, kills</a>
 				<br/>
@@ -801,7 +801,7 @@
 				<br/>
 				<a name="4.4.45">And ever three parts coward, I do not know</a>
 				<br/>
-				<a name="4.4.46">Why yet I live to say ‘This thing’s to do;’</a>
+				<a name="4.4.46">Why yet I live to say “This thing’s to do;”</a>
 				<br/>
 				<a name="4.4.47">Sith I have cause and will and strength and means</a>
 				<br/>
@@ -1241,11 +1241,11 @@
 				<br/>
 				<a name="4.5.109">The ratifiers and props of every word,</a>
 				<br/>
-				<a name="4.5.110">They cry ‘Choose we: Laertes shall be king:’</a>
+				<a name="4.5.110">They cry “Choose we: Laertes shall be king:”</a>
 				<br/>
 				<a name="4.5.111">Caps, hands, and tongues, applaud it to the clouds:</a>
 				<br/>
-				<a name="4.5.112">‘Laertes shall be king, Laertes king!’</a>
+				<a name="4.5.112">“Laertes shall be king, Laertes king!”</a>
 				<br/>
 			</blockquote>
 			<a name="speech28">
@@ -1767,7 +1767,7 @@
 				<b>Horatio</b>
 			</a>
 			<blockquote>
-				<a name="4.6.12">[Reads] ‘Horatio, when thou shalt have overlooked</a>
+				<a name="4.6.12">[Reads] “Horatio, when thou shalt have overlooked</a>
 				<br/>
 				<a name="4.6.13">this, give these fellows some means to the king:</a>
 				<br/>
@@ -1803,7 +1803,7 @@
 				<br/>
 				<a name="4.6.29">thee. Farewell.</a>
 				<br/>
-				<a name="4.6.30">‘He that thou knowest thine, HAMLET.’</a>
+				<a name="4.6.30">“He that thou knowest thine, HAMLET.”</a>
 				<br/>
 				<a name="4.6.31">Come, I will make you way for these your letters;</a>
 				<br/>
@@ -1963,7 +1963,7 @@
 				<p>
 					<i>Reads</i>
 				</p>
-				<a name="4.7.46">‘High and mighty, You shall know I am set naked on</a>
+				<a name="4.7.46">“High and mighty, You shall know I am set naked on</a>
 				<br/>
 				<a name="4.7.47">your kingdom. To-morrow shall I beg leave to see</a>
 				<br/>
@@ -1971,7 +1971,7 @@
 				<br/>
 				<a name="4.7.49">pardon thereunto, recount the occasion of my sudden</a>
 				<br/>
-				<a name="4.7.50">and more strange return. HAMLET.’</a>
+				<a name="4.7.50">and more strange return. HAMLET.”</a>
 				<br/>
 				<a name="4.7.51">What should this mean? Are all the rest come back?</a>
 				<br/>
@@ -1989,9 +1989,9 @@
 				<b>King Claudius</b>
 			</a>
 			<blockquote>
-				<a name="4.7.54">’Tis Hamlets character. ‘Naked!’</a>
+				<a name="4.7.54">’Tis Hamlets character. “Naked!”</a>
 				<br/>
-				<a name="4.7.55">And in a postscript here, he says ‘alone.’</a>
+				<a name="4.7.55">And in a postscript here, he says “alone.”</a>
 				<br/>
 				<a name="4.7.56">Can you advise me?</a>
 				<br/>
@@ -2006,7 +2006,7 @@
 				<br/>
 				<a name="4.7.59">That I shall live and tell him to his teeth,</a>
 				<br/>
-				<a name="4.7.60">‘Thus didest thou.’</a>
+				<a name="4.7.60">“Thus didest thou.”</a>
 				<br/>
 			</blockquote>
 			<a name="speech13">
@@ -2233,13 +2233,13 @@
 				<br/>
 				<a name="4.7.130">Dies in his own too much: that we would do</a>
 				<br/>
-				<a name="4.7.131">We should do when we would; for this ‘would’ changes</a>
+				<a name="4.7.131">We should do when we would; for this “would” changes</a>
 				<br/>
 				<a name="4.7.132">And hath abatements and delays as many</a>
 				<br/>
 				<a name="4.7.133">As there are tongues, are hands, are accidents;</a>
 				<br/>
-				<a name="4.7.134">And then this ‘should’ is like a spendthrift sigh,</a>
+				<a name="4.7.134">And then this “should” is like a spendthrift sigh,</a>
 				<br/>
 				<a name="4.7.135">That hurts by easing. But, to the quick o’ the ulcer:⁠—</a>
 				<br/>
