--- a/src/epub/text/act-5.xhtml
+++ b/src/epub/text/act-5.xhtml
@@ -53,7 +53,7 @@
 				<b>First Clown</b>
 			</a>
 			<blockquote>
-				<a name="5.1.9">It must be ‘se offendendo;’ it cannot be else. For</a>
+				<a name="5.1.9">It must be “se offendendo;” it cannot be else. For</a>
 				<br/>
 				<a name="5.1.10">here lies the point: if I drown myself wittingly,</a>
 				<br/>
@@ -157,7 +157,7 @@
 			<blockquote>
 				<a name="5.1.35">What, art a heathen? How dost thou understand the</a>
 				<br/>
-				<a name="5.1.36">Scripture? The Scripture says ‘Adam digged:’</a>
+				<a name="5.1.36">Scripture? The Scripture says “Adam digged:”</a>
 				<br/>
 				<a name="5.1.37">could he dig without arms? I’ll put another</a>
 				<br/>
@@ -210,9 +210,9 @@
 				<b>Second Clown</b>
 			</a>
 			<blockquote>
-				<a name="5.1.50">‘Who builds stronger than a mason, a shipwright, or</a>
+				<a name="5.1.50">“Who builds stronger than a mason, a shipwright, or</a>
 				<br/>
-				<a name="5.1.51">a carpenter?’</a>
+				<a name="5.1.51">a carpenter?”</a>
 				<br/>
 			</blockquote>
 			<a name="speech21">
@@ -254,9 +254,9 @@
 				<br/>
 				<a name="5.1.57">ass will not mend his pace with beating; and, when</a>
 				<br/>
-				<a name="5.1.58">you are asked this question next, say ‘a</a>
+				<a name="5.1.58">you are asked this question next, say “a</a>
 				<br/>
-				<a name="5.1.59">grave-maker:’ the houses that he makes last till</a>
+				<a name="5.1.59">grave-maker:” the houses that he makes last till</a>
 				<br/>
 				<a name="5.1.60">doomsday. Go, get thee to Yaughan: fetch me a</a>
 				<br/>
@@ -348,9 +348,9 @@
 				<b>Hamlet</b>
 			</a>
 			<blockquote>
-				<a name="5.1.83">Or of a courtier; which could say ‘Good morrow,</a>
+				<a name="5.1.83">Or of a courtier; which could say “Good morrow,</a>
 				<br/>
-				<a name="5.1.84">sweet lord! How dost thou, good lord?’ This might</a>
+				<a name="5.1.84">sweet lord! How dost thou, good lord?” This might</a>
 				<br/>
 				<a name="5.1.85">be my lord such-a-one, that praised my lord</a>
 				<br/>
@@ -498,7 +498,7 @@
 				<b>Hamlet</b>
 			</a>
 			<blockquote>
-				<a name="5.1.125">‘Thou dost lie in’t, to be in’t and say it is thine:</a>
+				<a name="5.1.125">“Thou dost lie in’t, to be in’t and say it is thine:</a>
 				<br/>
 				<a name="5.1.126">’tis for the dead, not for the quick; therefore thou liest.</a>
 				<br/>
@@ -577,7 +577,7 @@
 				<b>First Clown</b>
 			</a>
 			<blockquote>
-				<a name="5.1.142">Of all the days i’ the year, I came to’t that day</a>
+				<a name="5.1.142">Of all the days i” the year, I came to’t that day</a>
 				<br/>
 				<a name="5.1.143">that our last king Hamlet overcame Fortinbras.</a>
 				<br/>
@@ -1150,7 +1150,7 @@
 				<b>Hamlet</b>
 			</a>
 			<blockquote>
-				<a name="5.1.280">‘Swounds, show me what thou’lt do:</a>
+				<a name="5.1.280">“Swounds, show me what thou’lt do:</a>
 				<br/>
 				<a name="5.1.281">Woo’t weep? woo’t fight? woo’t fast? woo’t tear thyself?</a>
 				<br/>
@@ -1383,7 +1383,7 @@
 				<br/>
 				<a name="5.2.45">And stand a comma ’tween their amities,</a>
 				<br/>
-				<a name="5.2.46">And many such-like ‘As’es of great charge,</a>
+				<a name="5.2.46">And many such-like “As’es of great charge,</a>
 				<br/>
 				<a name="5.2.47">That, on the view and knowing of these contents,</a>
 				<br/>
@@ -1489,7 +1489,7 @@
 			<blockquote>
 				<a name="5.2.78">It will be short: the interim is mine;</a>
 				<br/>
-				<a name="5.2.79">And a man’s life’s no more than to say ‘One.’</a>
+				<a name="5.2.79">And a man’s life’s no more than to say “One.”</a>
 				<br/>
 				<a name="5.2.80">But I am very sorry, good Horatio,</a>
 				<br/>
@@ -1843,7 +1843,7 @@
 				<br/>
 				<a name="5.2.162">liberal-conceited carriages; that’s the French bet</a>
 				<br/>
-				<a name="5.2.163">against the Danish. Why is this ‘imponed,’ as you call it?</a>
+				<a name="5.2.163">against the Danish. Why is this “imponed,” as you call it?</a>
 				<br/>
 			</blockquote>
 			<a name="speech56">
@@ -1865,7 +1865,7 @@
 				<b>Hamlet</b>
 			</a>
 			<blockquote>
-				<a name="5.2.169">How if I answer ‘no’?</a>
+				<a name="5.2.169">How if I answer “no”?</a>
 				<br/>
 			</blockquote>
 			<a name="speech58">
@@ -2274,7 +2274,7 @@
 				<br/>
 				<a name="5.2.276">The cannons to the heavens, the heavens to earth,</a>
 				<br/>
-				<a name="5.2.277">‘Now the king dunks to Hamlet.’ Come, begin:</a>
+				<a name="5.2.277">“Now the king dunks to Hamlet.” Come, begin:</a>
 				<br/>
 				<a name="5.2.278">And you, the judges, bear a wary eye.</a>
 				<br/>
